# fastai-learning

./: .gitignore  01_getting_started.ipynb  01_mnist_experiment.ipynb  04_nlp_huggingface_transformers.ipynb  04_pearson_correlation_coefficient.ipynb  05_from_scratch_model.ipynb  README.md  pyproject.toml
