[tool.poetry]
name = "fastai-learning"
version = "0.1.0"
description = "Learning AI through fast.ai"
authors = ["Pranit Bauva <pranit@bauva.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastai = "^2.7.17"
numpy = "^2.1.0"
torch = "^2.4.0"
nbdev = "^2.3.29"
jupyter = "^1.1.1"
fastbook = "^0.0.29"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
